--- a/preferencemanagement/src/main/res/values/strings.xml
+++ b/preferencemanagement/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="default_off">Off by default</string>
     <string name="pref_omemo_setting_summary_default_off">Omemo settings summary</string>
     <string name="pref_omemo_setting">Omemo settings title</string>
+    <string name="language">Language</string>
 </resources>
